--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.10.4",
     "loaders.css": "^0.1.2",
     "lottie-web": "^5.9.3",
+    "node-sass": "^9.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^6.3.0",
