--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "gsap": "^3.10.4",
     "loaders.css": "^0.1.2",
     "lottie-web": "^5.9.3",
+    "memfs": "^4.17.0",
     "node-sass": "^9.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.28.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
